# lome

./: .gitmodules  .pre-commit-config.yaml  README.md  license_header.txt  pyproject.toml  test_pop_benchmark.py
.github/workflows/: test.yml
docs/: API.md  README.md  architecture.md  floating-point.md  getting-started.md  instruction-support.md  model-semantics.md  testing-and-development.md
examples/: basic_usage.py
lome/: __init__.py  changes.py  executor.py  float_utils.py  model.py  state.py  trace.py  types.py
lome/instructions/: __init__.py  arithmetic.py  branch.py  common.py  compare.py  float.py  jump.py  load_store.py  logical.py  multiply_divide.py  shift.py  system.py
riscv_model/: __init__.py  changes.py  executor.py  float_utils.py  memory.py  model.py  ras.py  state.py
riscv_model/instructions/: __init__.py  arithmetic.py  branch.py  compare.py  float.py  jump.py  load_store.py  logical.py  shift.py  system.py
tests/: __init__.py  _opcode.py  conftest.py  test_changes.py  test_float.py  test_instruction_coverage.py  test_instructions.py  test_model.py  test_model_peek_poke.py  test_state.py
