[project]
name = "lome"
version = "0.1.0"
description = "Python RISC-V functional model"
readme = "README.md"
license = "MIT"
dependencies = [
    "eumos @ git+ssh://git@github.com/Alldred/eumos.git",
]
authors = [
    { name = "Stuart Alldred", email = "stuartalldred@gmail.com" },
]
requires-python = ">= 3.13"

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "pre-commit", "pykwalify", "PyYAML"]

[tool.pytest.ini_options]
pythonpath = ["lome"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["lome"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
